<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vnc</string>
   
    <string name="menu_settings">Settings</string>
	<string name="textview1">IP Address</string>
	<string name="textview2">Port No</string>
	<string name="button1">Connect</string>
	<string name="app_name1">Vnc</string>
	<string name="pass">Password</string>
	<string name="submit">Submit</string>
	<string name="security">Enter no</string>
	<string name="sub">Submit</string>
	<string name="prompt1">Enter Password</string>
	<string name="show">Show No</string>
	<string name="img">img</string>
</resources>